# temporai-clinic

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pypi.md  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
docs/: changelog.md  conf.py  index.md  overview.md  pre_build.py  requirements.txt
src/tempor/clinic/: __init__.py  app_state.py  components.py  const.py  data_def.py  db_utils.py  deta_utils.py  field_def.py  utils.py
tests/: conftest.py  test_import.py
